better neo configs